--- a/app/views/games/score.html.erb
+++ b/app/views/games/score.html.erb
@@ -5,4 +5,5 @@
 <% else %>
   <p><strong>Sorry!</strong> <%= params["input_word"] %> is not a valid English word</p>
 <% end %>
+<%= link_to 'Play again', :new %>
 </div>
